--- a/src/views/project.jade
+++ b/src/views/project.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title INSPINIA | Widgets
+    title The Three of Us - Project Dashboard
     link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/font-awesome/css/font-awesome.css', rel='stylesheet')
     link(href='/css/plugins/iCheck/custom.css', rel='stylesheet')
