--- a/src/views/sdlc.jade
+++ b/src/views/sdlc.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title INSPINIA | intimeline
+    title The Three of Us - SDLC Guide
     link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/font-awesome/css/font-awesome.css', rel='stylesheet')
     link(href='/css/plugins/iCheck/custom.css', rel='stylesheet')
