--- a/src/views/sdlc.jade
+++ b/src/views/sdlc.jade
@@ -66,7 +66,7 @@ html
             .col-lg-6
               .widget.style1.navy-bg
                 #vertical-timeline.vertical-container
-                  .vertical-timeline-block.selected
+                  #overview.vertical-timeline-block
                     .vertical-timeline-icon.blue-bg
                       i.fa.fa-briefcase
                     .vertical-timeline-content
@@ -78,7 +78,7 @@ html
                         | The following steps will help guide you through the stages
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(href='/') Tips
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(onclick="updateStatus(#{constants.SDLCStep.OVERVIEW});") Set as Project Status
-                  .vertical-timeline-block
+                  #planning.vertical-timeline-block
                     .vertical-timeline-icon.blue-bg
                       i.fa.fa-file-text
                     .vertical-timeline-content
@@ -90,7 +90,7 @@ html
                         | Planning for the quality assurance requirements and identification of the risks associated with the project is also done in the planning stage. The outcome of the technical feasibility study is to define the various technical approaches that can be followed to implement the project successfully with minimum risks.
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(href='/') Tips
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(onclick="updateStatus(#{constants.SDLCStep.PLANNING});") Set as Project Status
-                  .vertical-timeline-block
+                  #requirements.vertical-timeline-block
                     .vertical-timeline-icon.blue-bg
                       i.fa.fa-coffee
                     .vertical-timeline-content
@@ -99,7 +99,7 @@ html
                         | Once the requirement analysis is done the next step is to clearly define and document the product requirements and get them approved from the customer or the market analysts. This is done through .SRS. . Software Requirement Specification document which consists of all the product requirements to be designed and developed during the project life cycle.
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(href='/') Tips
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(onclick="updateStatus(#{constants.SDLCStep.REQUIREMENTS});") Set as Project Status
-                  .vertical-timeline-block
+                  #design.vertical-timeline-block
                     .vertical-timeline-icon.blue-bg
                       i.fa.fa-phone
                     .vertical-timeline-content
@@ -114,7 +114,7 @@ html
                         | A design approach clearly defines all the architectural modules of the product along with its communication and data flow representation with the external and third party modules (if any). The internal design of all the modules of the proposed architecture should be clearly defined with the minutest of the details in DDS.
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(href='/') Tips
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(onclick="updateStatus(#{constants.SDLCStep.DESIGN});") Set as Project Status
-                  .vertical-timeline-block
+                  #implementation.vertical-timeline-block
                     .vertical-timeline-icon.blue-bg
                       i.fa.fa-user-md
                     .vertical-timeline-content
@@ -126,7 +126,7 @@ html
                         | Developers have to follow the coding guidelines defined by their organization and programming tools like compilers, interpreters, debuggers etc are used to generate the code. Different high level programming languages such as C, C++, Pascal, Java, and PHP are used for coding. The programming language is chosen with respect to the type of software being developed.
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(href='/') Tips
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(onclick="updateStatus(#{constants.SDLCStep.IMPLEMENTATION});") Set as Project Status
-                  .vertical-timeline-block
+                  #testing.vertical-timeline-block
                     .vertical-timeline-icon.blue-bg
                       i.fa.fa-comments
                     .vertical-timeline-content
@@ -135,7 +135,7 @@ html
                         | This stage is usually a subset of all the stages as in the modern SDLC models, the testing activities are mostly involved in all the stages of SDLC. However this stage refers to the testing only stage of the product where products defects are reported, tracked, fixed and retested, until the product reaches the quality standards defined in the SRS.
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(href='/') Tips
                       a.btn.btn-sm.btn-primary.m-xs.btn-outline(onclick="updateStatus(#{constants.SDLCStep.TESTING});") Set as Project Status
-                  .vertical-timeline-block
+                  #deployment-and-maintenance.vertical-timeline-block
                     .vertical-timeline-icon.blue-bg
                       i.fa.fa-comments
                     .vertical-timeline-content
@@ -157,7 +157,49 @@ html
     script.
       function updateStatus(status) {
         $.post( '/sdlc/#{sdlc._id}', {status}, function( data ) {
-          // call websock function
+          onStatusUpdate(status)
         }, 'json');
       }
+    // Socket.IO
+    script(src='/socket.io/socket.io.js')
+    script.
+      var socket = io();
 
+      socket.on('data', function(data) {
+        onStatusUpdate(data.status)
+      });
+
+      socket.emit('subscribe', '#{sdlc._id}');
+
+      function onStatusUpdate(status) {
+        var selected = $('.selected');
+
+        var newSelected;
+        switch(status) {
+          case parseInt('#{constants.SDLCStep.OVERVIEW}', 10):
+            newSelected = $('#overview')
+            break;
+          case parseInt('#{constants.SDLCStep.PLANNING}', 10):
+            newSelected = $('#planning')
+            break;
+          case parseInt('#{constants.SDLCStep.REQUIREMENTS}', 10):
+            newSelected = $('#requirements')
+            break;
+          case parseInt('#{constants.SDLCStep.IMPLEMENTATION}', 10):
+            newSelected = $('#implementation')
+            break;
+          case parseInt('#{constants.SDLCStep.TESTING}', 10):
+            newSelected = $('#testing')
+            break;
+          case parseInt('#{constants.SDLCStep.DEPLOYMENT_AND_MAINTENANCE}', 10):
+            newSelected = $('#deployment-and-maintenance')
+            break;
+          default:
+            newSelected = selected;
+        }
+
+        if (newSelected !== selected) {
+          selected.removeClass('selected');
+          newSelected.addClass('selected');
+        }
+      }
