fix: assign projectID as _id of sdlc

--- a/src/views/sdlc.jade
+++ b/src/views/sdlc.jade
@@ -171,7 +171,10 @@ html
 
       socket.emit('subscribe', '#{sdlc._id}');
 
+      onStatusUpdate('#{sdlc.status}')
+
       function onStatusUpdate(status) {
+        status = parseInt(status, 10);
         var selected = $('.selected');
 
         var newSelected;
