fix: missing case statement for DESIGN

--- a/src/views/sdlc.jade
+++ b/src/views/sdlc.jade
@@ -188,6 +188,9 @@ html
           case parseInt('#{constants.SDLCStep.REQUIREMENTS}', 10):
             newSelected = $('#requirements')
             break;
+          case parseInt('#{constants.SDLCStep.DESIGN}', 10):
+            newSelected = $('#design')
+            break;
           case parseInt('#{constants.SDLCStep.IMPLEMENTATION}', 10):
             newSelected = $('#implementation')
             break;
