--- a/src/views/project.jade
+++ b/src/views/project.jade
@@ -21,7 +21,7 @@ html
                 .widget.style1.yellow-bg
                   .row
                     .col-xs-4
-                      i.fa.fa-info-circle.fa-5x
+                      i.fa.fa-folder-open-o.fa-5x
                     .col-xs-8.text-right
                       span Project Manager
             .col-lg-2
@@ -29,7 +29,7 @@ html
                 .widget.style1.yellow-bg
                   .row
                     .col-xs-4
-                      i.fa.fa-info-circle.fa-5x
+                      i.fa.fa-code.fa-5x
                     .col-xs-8.text-right
                       span Code editor
             .col-lg-2
