--- a/src/views/sdlc.jade
+++ b/src/views/sdlc.jade
@@ -166,6 +166,7 @@ html
       var socket = io();
 
       socket.on('data', function(data) {
+        console.log(data)
         onStatusUpdate(data.status)
       });
 
