--- a/src/views/project.jade
+++ b/src/views/project.jade
@@ -1,119 +1,39 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title The Three of Us - Project Dashboard
-    link(href='/css/bootstrap.min.css', rel='stylesheet')
-    link(href='/font-awesome/css/font-awesome.css', rel='stylesheet')
-    link(href='/css/plugins/iCheck/custom.css', rel='stylesheet')
-    link(href='/css/animate.css', rel='stylesheet')
-    link(href='/css/plugins/codemirror/codemirror.css', rel='stylesheet')
-    link(href='/css/plugins/codemirror/ambiance.css', rel='stylesheet')
-    link(href='/css/style.css', rel='stylesheet')
-  body
-    #wrapper
-      #page-wrapper.gray-bg
-        .wrapper.wrapper-content.animated.fadeInRight
-          .row
-            .col-lg-2
-              a(href='/')
-                .widget.style1.yellow-bg
-                  .row
-                    .col-xs-4
-                      i.fa.fa-folder-open-o.fa-5x
-                    .col-xs-8.text-right
-                      span Project Manager
-            .col-lg-2
-              a(href='/projects/#{project._id}')
-                .widget.style1.yellow-bg
-                  .row
-                    .col-xs-4
-                      i.fa.fa-code.fa-5x
-                    .col-xs-8.text-right
-                      span Code editor
-            .col-lg-2
-              a(href='/sdlc/#{project._id}')
-                .widget.style1.yellow-bg
-                  .row
-                    .col-xs-4
-                      i.fa.fa-info-circle.fa-5x
-                    .col-xs-8.text-right
-                      span Software Development Life Cycle Guide
-            .col-lg-2
-              a
-                .widget.style1.yellow-bg
-                  .row
-                    .col-xs-4
-                      i.fa.fa-list-ul.fa-5x
-                    .col-xs-8.text-right
-                      span Agile Board
-            .col-lg-2
-              a
-                .widget.style1.yellow-bg
-                  .row
-                    .col-xs-4
-                      i.fa.fa-pencil-square-o.fa-5x
-                    .col-xs-8.text-right
-                      span Code Review
-            .col-lg-2
-              a
-                .widget.style1.yellow-bg
-                  .row
-                    .col-xs-4.text-center
-                      i.fa.fa-exclamation-triangle.fa-5x
-                    .col-xs-8.text-right
-                      span Unit Testing
-          .row
-            .col-lg-12
-              .widget.style1.navy-bg
-                h1.m-xs Source Code Editor
-                br
-                textarea#code1
-                  script.
-                    // Code goes here
-                    // For demo purpose - animation css script
-                    function animationHover(element, animation)
-                    element = $(element);
-                    element.hover(
-                    function()
-                    element.addClass('animated ' + animation);
-                    },
-                    function()
-                    //wait for animation to finish before removing classes
-                    window.setTimeout( function()
-                    element.removeClass('animated ' + animation);
-                    }, 2000);
-                    });
-                    }
+extends ./layout.jade
 
-    // Mainly scripts
-    script(src='/js/jquery-2.1.1.js')
-    script(src='/js/jquery-ui-1.10.4.min.js')
-    script(src='/js/bootstrap.min.js')
-    script(src='/js/plugins/metisMenu/jquery.metisMenu.js')
-    script(src='/js/plugins/slimscroll/jquery.slimscroll.min.js')
-    // CodeMirror
-    script(src='/js/plugins/codemirror/codemirror.js')
-    script(src='/js/plugins/codemirror/mode/javascript/javascript.js')
-    script.
-      $(document).ready(function(){
-        var editor_one = CodeMirror.fromTextArea(document.getElementById("code1"), {
-          lineNumbers: true,
-          matchBrackets: true,
-          styleActiveLine: true,
-          theme:"ambiance"
-        });
+block content
+  .row
+    .col-lg-12
+      .widget.style1.navy-bg
+        h1.m-xs Source Code Editor
+        br
+        textarea#code1
+          script.
+            // Code goes here
+            // For demo purpose - animation css script
+            function animationHover(element, animation)
+            element = $(element);
+            element.hover(
+            function()
+            element.addClass('animated ' + animation);
+            },
+            function()
+            //wait for animation to finish before removing classes
+            window.setTimeout( function()
+            element.removeClass('animated ' + animation);
+            }, 2000);
+            });
+            }
+
+block scripts
+  // CodeMirror
+  script(src='/js/plugins/codemirror/codemirror.js')
+  script(src='/js/plugins/codemirror/mode/javascript/javascript.js')
+  script.
+    $(document).ready(function() {
+      var editor_one = CodeMirror.fromTextArea(document.getElementById("code1"), {
+        lineNumbers: true,
+        matchBrackets: true,
+        styleActiveLine: true,
+        theme:"ambiance"
       });
-    // Custom and plugin javascript
-    script(src='/js/plugins/pace/pace.min.js')
-    // Socket.IO
-    script(src='/socket.io/socket.io.js')
-    script.
-      var socket = io();
-
-      socket.on('data', function(data) {
-        console.log(data);
-      });
-
-      socket.emit('subscribe', '#{project._id}');
+    });
