--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -4,6 +4,7 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title The Three of Us - Project Dashboard
+    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js")
     link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/font-awesome/css/font-awesome.css', rel='stylesheet')
     link(href='/css/plugins/iCheck/custom.css', rel='stylesheet')
@@ -15,6 +16,10 @@ html
     #wrapper
       #page-wrapper.gray-bg
         .wrapper.wrapper-content.animated.fadeInRight
+          if (err)
+            .alert.alert-warning
+              strong Oops something went wrong!
+              |  #{err}
           .row
             .col-lg-2
               a(href='/')
